--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq g++ git wget
+ - sudo apt-get install -qq build-essential bison flex gettext libncurses5-dev texinfo autoconf automake libtool g++ git wget mercurial subversion zlib1g bc
 language: cpp
 compiler:
   - gcc
